# iM.Master-SDK

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: BLUETOOTH.md
examples/: find_and_go.py
immaster/: __init__.py  agent.py  camera.py  detect.py  driver.py  llm.py  personas.py  protocol.py  robot.py  testing.py  vision.py  voice.py
tests/: test_agent.py  test_camera.py  test_llm.py  test_protocol.py
